# icfpc2021

./: .gitmodules  README.md
.github/workflows/: github-actions-demo.yml
gui-tool/: README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
gui-tool/src/: main.ts
hori1991/: .gitignore  main.cpp
hori1991/innerpoint/: 100_innerpoint.txt  101_innerpoint.txt  102_innerpoint.txt  103_innerpoint.txt  104_innerpoint.txt  105_innerpoint.txt  106_innerpoint.txt  107_innerpoint.txt  108_innerpoint.txt  109_innerpoint.txt  10_innerpoint.txt  110_innerpoint.txt  111_innerpoint.txt  112_innerpoint.txt  113_innerpoint.txt  114_innerpoint.txt  115_innerpoint.txt  116_innerpoint.txt  117_innerpoint.txt  118_innerpoint.txt  119_innerpoint.txt  11_innerpoint.txt  120_innerpoint.txt  121_innerpoint.txt  122_innerpoint.txt  123_innerpoint.txt  124_innerpoint.txt  125_innerpoint.txt  126_innerpoint.txt  (+104 more)
jyoneyama/post_minimal_dislike/: Cargo.toml
jyoneyama/post_minimal_dislike/src/: main.rs
pes/: README.md
problems_txt/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  14.txt  15.txt  (+92 more)
ryo_n/: calc_dislikes.py
solutions/: 1.json  11.json  12.json  13.json  5.json  55.json  58.json  7.json
tools/: convert.py  submit.sh
yana87/: dislikes_zero.cpp  memo.md
(+141 files in other folders)
